--- a/02CSS/Day13/styler.css
+++ b/02CSS/Day13/styler.css
@@ -3,10 +3,35 @@
     width:800px;
     background-color: aqua;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .box{
     height: 300px;
     width: 300px;
-    background-color: brown;
+    border-radius: 50%;
+    background-color: rgb(237, 152, 14);
     margin: 10px;
+    transition-property: background-color;
+    transition-duration: 3s;
+    /* transition-timing-function: linear; */
+    transition-timing-function: ease;
+    transition-delay: 1s;
+
+    /* box-shadow: -5px -20px ; horizontal and vertical */
+    /* box-shadow: -5px -20px red; color is added */
+    /* box-shadow: -5px -20px 5px red; blurr is added */
+    /* box-shadow: -5px -20px 5px 30px red; */
+    /* box-shadow: 0px 0px 20px 20px rgb(233, 207, 6); */
+    /* box-shadow:inset 0px 0px 20px 20px rgb(233, 207, 6); */
+    /* box-shadow: inset 100px 100px red; */
+    /* border-radius: 50%; */
+}
+/* text shadwo is homework */
+ /* shorthand notation kya hai */
+.box:hover{
+    background-color: black;
+    width: 600px;
+    height: 600px;
 }
